<resources>
    <string name="app_name">Step It Up</string>
    <string name="animate">animate</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="category_hats">Hats</string>
    <string name="category_shirts">Shirts</string>
    <string name="category_pants">Pants</string>
    <string name="category_shoes">Shoes</string>
    <string name="buy">Buy</string>
    <string name="equip">Equip</string>
    <string name="owned">Owned</string>
    <string name="avatar">avatar body</string>
    <string name="avatar_shoes">avatar_shoes</string>
    <string name="avatar_pants">avatar_pants</string>
    <string name="avatar_shirt">avatar_shirt</string>
    <string name="avatar_hat">avatar_hat</string>
    <string name="change_model">change model</string>
    <string name="customize">Customize</string>
    <string name="unequip">Unequip</string>
    <string name="friends_list">Friends List</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="menu_graphs_title">Graphs</string>
    <string name="menu_shop_title">Shop</string>
    <string name="menu_logut_name">Logout</string>
    <string name="menu_friends_name">Friends</string>
    <string name="friends">Friends</string>
    <string name="pending">Pending</string>
    <string name="add_friends">Add Friends</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="signup_message">Don\'t have an account? Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="start_session">Start Session</string>
    <string name="end_session">End Session</string>
    <string name="profile">Profile</string>
    <string name="graphs">Weekly Statistics</string>
</resources>
