<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/avatar"
        android:src="@drawable/body_animation" />

    <ImageView
        android:id="@+id/avatar_shoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/avatar_shoes"
        android:src="@drawable/blank"
        tools:src="@drawable/boots_0" />

    <ImageView
        android:id="@+id/avatar_pants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/avatar_pants"
        android:src="@drawable/blank"
        tools:src="@drawable/dresspants_0" />

    <ImageView
        android:id="@+id/avatar_shirt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/avatar_shirt"
        android:src="@drawable/blank"
        tools:src="@drawable/spotpjshirtblue_animation" />

    <ImageView
        android:id="@+id/avatar_hat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/avatar_hat"
        android:src="@drawable/blank"
        tools:src="@drawable/jesterhat_0" />

</merge>