<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="69.5dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/shape_shop_item_border">

    <include layout="@layout/item_layout" />

    <ToggleButton
        android:id="@+id/equip_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_buy_button"
        android:text="@string/equip"
        android:textColor="#fff"
        android:textOff="@string/equip"
        android:textOn="@string/unequip"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_item_name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Equip" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/owned"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/shop_item_name"
        app:layout_constraintStart_toStartOf="@id/shop_item_name"
        app:layout_constraintTop_toBottomOf="@id/shop_item_name" />
</android.support.constraint.ConstraintLayout>