<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jekz.stepitup.ui.home.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/image_avatar_home"
        android:layout_width="@dimen/avatar_item_width"
        android:layout_height="0dp"
        android:src="@drawable/body_animation"
        app:layout_constraintBottom_toTopOf="@+id/guideline_avatar_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_avatar_top" />

    <ImageView
        android:id="@+id/image_avatar_shoes_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/blank"
        app:layout_constraintBottom_toBottomOf="@+id/image_avatar_home"
        app:layout_constraintEnd_toEndOf="@+id/image_avatar_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_avatar_home"
        app:layout_constraintTop_toTopOf="@+id/image_avatar_home"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/boots_0" />

    <ImageView
        android:id="@+id/image_avatar_pants_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/avatar_pants"
        android:src="@drawable/blank"
        app:layout_constraintBottom_toBottomOf="@+id/image_avatar_home"
        app:layout_constraintEnd_toEndOf="@+id/image_avatar_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_avatar_home"
        app:layout_constraintTop_toTopOf="@+id/image_avatar_home"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/dresspants_0" />

    <ImageView
        android:id="@+id/image_avatar_shirt_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/avatar_shirt"
        android:src="@drawable/blank"
        app:layout_constraintBottom_toBottomOf="@+id/image_avatar_home"
        app:layout_constraintEnd_toEndOf="@+id/image_avatar_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_avatar_home"
        app:layout_constraintTop_toTopOf="@+id/image_avatar_home"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/spotpjshirtblue_animation" />

    <ImageView
        android:id="@+id/image_avatar_hat_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/avatar_hat"
        android:src="@drawable/blank"
        app:layout_constraintBottom_toBottomOf="@+id/image_avatar_home"
        app:layout_constraintEnd_toEndOf="@+id/image_avatar_home"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/image_avatar_home"
        app:layout_constraintTop_toTopOf="@+id/image_avatar_home"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_avatar_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34920636" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_avatar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64902997" />

</android.support.constraint.ConstraintLayout>
