<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:avatarimage="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shop_background"
    app:layout_constraintTop_toBottomOf="@+id/avatar"
    tools:layout_editor_absoluteY="25dp">

    <RadioGroup
        android:id="@+id/radio_group_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_friends"
        app:layout_constraintEnd_toEndOf="@id/recycler_view_friends"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/recycler_view_friends"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top_friends"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/friends_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/radiobutton"
            android:button="@null"
            android:fontFamily="sans-serif"
            android:text="@string/friends"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@drawable/radiobutton_text"
            android:textSize="12sp"
            android:typeface="normal" />

        <RadioButton
            android:id="@+id/pending_friends_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/radiobutton"
            android:button="@null"
            android:text="@string/pending"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@drawable/radiobutton_text"
            android:textSize="12sp"
            android:typeface="normal" />

        <RadioButton
            android:id="@+id/search_friends_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/radiobutton"
            android:button="@null"
            android:text="@android:string/search_go"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@drawable/radiobutton_text"
            android:textSize="12sp"
            android:typeface="normal"
            android:visibility="gone" />
    </RadioGroup>

    <com.jekz.stepitup.customview.AvatarImage
        android:id="@+id/avatar_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_friends"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_margin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_center_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_avatar"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="80"
        avatarimage:avatar="@drawable/body_animation"
        avatarimage:hat="@drawable/cap_0"
        avatarimage:pants="@drawable/dresspants_0"
        avatarimage:shirt="@drawable/dressshirt_animation"
        avatarimage:shoes="@drawable/raceshoesred_0" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:text="@string/friends_list"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top_avatar"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_margin" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_friends"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/shape_shop_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top_friends"
        tools:listitem="@layout/viewholder_shop_owneditem" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.052083332" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_buttonbox_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3557522" />

    <ImageButton
        android:id="@+id/button_shop_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/text_title"
        app:layout_constraintEnd_toStartOf="@+id/text_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_margin"
        app:layout_constraintTop_toTopOf="@id/text_title"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/button_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/friend_buttons_box"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
        app:layout_constraintEnd_toStartOf="@+id/guideline_buttonbox_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_margin"
        app:layout_constraintTop_toTopOf="@+id/avatar_image">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/friends_button"
            android:fontFamily="casual"
            android:text="@string/add_friends"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/button_box"
            app:layout_constraintStart_toStartOf="@+id/button_box"
            tools:layout_editor_absoluteY="103dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>